syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(GetProductRequest) returns (ProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  int32 stock = 3;
}

message GetProductRequest {
  int32 id = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 limit = 2;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message DeleteProductRequest {
  int32 id = 1;
}

message CheckStockRequest {
  int32 product_id = 1;
  int32 quantity = 2;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
  string created_at = 5;
  string updated_at = 6;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

message CheckStockResponse {
  bool available = 1;
  int32 current_stock = 2;
  string message = 3;
}
